--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -8,27 +8,31 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Download subconverter
+      - name: Download subconverter binary
         run: |
-          git clone https://github.com/tindy2013/subconverter.git
-          cd subconverter
+          wget https://github.com/tindy2013/subconverter/releases/latest/download/subconverter_linux64.tar.gz
+          tar -xzf subconverter_linux64.tar.gz
           chmod +x subconverter
+
+      - name: Create config
+        run: |
+          echo "[custom]" > pref.ini
+          echo "path=output" >> pref.ini
+          echo "url=https://example1.com/sub|https://example2.com/sub" >> pref.ini
 
       - name: Run subconverter
         run: |
-          cd subconverter
           ./subconverter -g
-          
+
       - name: Commit output
         run: |
-          mkdir -p output
-          cp subconverter/base/* output/sub.txt
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
           git add .
-          git commit -m "Update subscription"
+          git commit -m "Update subscription" || echo "No changes"
           git push
